--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-start": "^1.161.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.71.1",
     "redaxios": "^0.5.1",
     "tailwind-merge": "^2.6.0"
   },
